# graph-kpartitioning

./: .gitignore  CMakeLists.txt  README.md  build_vs2022x64_debug_windows.bat  get_external_packages_windows.bat
apps/: main.cpp
data/: add20.mtx  b1_ss.mtx  fe_body.mtx
include/: benchmark.hpp  bipartitioner.hpp  coarse_level.hpp  coarsening.hpp  config.hpp  dynamic_array.hpp  graph.hpp  heap.hpp  io_utils.hpp  matrix.hpp  metrics.hpp  partitioner.hpp  post_processing.hpp  program_statistics.hpp  types.hpp  uncoarsening.hpp  utils.hpp
mtx cheker/: add32.mtx  mtx_names.txt  test_matrix1.mtx
src/: io_utils.cpp  mmio.cpp  partitioner.cpp  utils.cpp
src/graph/: graph_reader.cpp
src/graph_partition/: partitioner.cpp
tests/: CMakeLists.txt  test_main.cpp  tests_coarsening.cpp  tests_dynamic_array.cpp  tests_graph.cpp  tests_heap.cpp  tests_metrics.cpp  tests_partitioner.cpp
tests/data/: test_matrix2.mtx
utils/graph_plotter/: visualize.py
utils/mtx cheker/: cheker.py
utils/mtx_validator/: cheker.py  mtx_names.txt
utils/plotting graphs/: input.txt
